# lampak

./: .gitignore  LICENSE.md  README.md  pyproject.toml
lampak/: __main__.py
lampak/dependency/: __init__.py  poetry.py
