[tool.poetry]
name = "lampak"
version = "0.1.0"
description = "AWS Lambda Packager"
authors = ["Doug Reynolds"]

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.0"
click = "^7.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
